fixing a layout issue in block-domain.

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ a {
   font-weight: 600;
   font-size: 2rem;
   margin: 1rem 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-transform: uppercase;
   border: 0;
   text-align: center;
@@ -271,7 +271,6 @@ a {
 
 .input {
   border-radius: var(--border-radius);
-  border: 1px solid var(--color-border);
   color: var(--color-headings);
   font-size: 2rem;
   outline: none;
@@ -304,6 +303,7 @@ in our webpage it is grouped with a SEARCH button */
   border: none;
   width: auto;
   flex-grow: 1;
+  min-width: 0;
 }
 
 .input-group .button {
